# mul_agent-for-text-mining

./: AGENTS.md  prompt.md
pepfinder/: .env.example  .gitignore  README.md  pyproject.toml
pepfinder/data/samples/: sample_article_1.md  sample_article_2.txt  sample_article_3.tex
pepfinder/pepfinder/: __init__.py
pepfinder/scripts/: run_demo.py
pepfinder/src/pepfinder/: __init__.py  cli.py  config.py
pepfinder/src/pepfinder/agents/: __init__.py  base.py
pepfinder/src/pepfinder/pipeline/: orchestrator.py
pepfinder/src/pepfinder/schemas/: __init__.py  chunk.py  document.py  extraction.py  stage2.py
pepfinder/src/pepfinder/stage1/: __init__.py  agent.py  artifacts.py  base.py  detector.py  markdown_normalizer.py  normalizer.py  structure_parser.py
pepfinder/src/pepfinder/stage1/converters/: __init__.py  doc_converter.py  marker_adapter.py  tex_converter.py  text_converter.py
pepfinder/src/pepfinder/stage2/: __init__.py  artifacts.py  base.py  chunker.py  fine_grained.py  global_structure.py
pepfinder/src/pepfinder/stage3/: __init__.py  aggregator.py  extraction_agent.py  extraction_controller.py  extractor.py  output_validator.py  prompt_builder.py  schema.py
pepfinder/src/pepfinder/utils/: __init__.py  io.py
pepfinder/tests/: test_cli.py  test_pipeline.py  test_stage1.py  test_stage2.py  test_stage3.py
