[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pepfinder"
version = "0.1.0"
description = "MVP multi-agent system for mining peptide data from scientific literature"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7,<3.0",
]

[project.scripts]
pepfinder = "pepfinder.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
